--- a/src/com/component/Menu.form
+++ b/src/com/component/Menu.form
@@ -24,8 +24,8 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Component id="panelMoving" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-              <Component id="listMenu1" pref="414" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="listMenu1" pref="423" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
